# usefulcpp

./: CMakeLists.txt  README.md
contrib/: CMakeLists.txt  hello.cpp  hello.h  hello.tst.cpp
